EARTH-289: Fixing z-index on gradient mixin (#54)

--- a/patterns/molecules/film-card/scss/film-card.component.scss
+++ b/patterns/molecules/film-card/scss/film-card.component.scss
@@ -22,7 +22,6 @@
 
 .film-card__link {
   @include image-overlay;
-  position: relative;
   display: inline-block;
   color: color(white);
 
