--- a/patterns/molecules/photo-tile/scss/photo-tile.component.scss
+++ b/patterns/molecules/photo-tile/scss/photo-tile.component.scss
@@ -33,7 +33,7 @@
   bottom: 20px;
   left: 20px;
   right: 20px;
-  z-index: 3;
+  z-index: 2;
 }
 
 .photo-tile__title {
