--- a/patterns/molecules/photo-tiles/css/photo-tiles.component.css
+++ b/patterns/molecules/photo-tiles/css/photo-tiles.component.css
@@ -43,6 +43,10 @@
   transform: scale(1.1);
 }
 
+.photo-tiles .photo-tile__action::before {
+  z-index: 1;
+}
+
 .photo-tiles .photo-thumbs {
   display: none;
 }
