--- a/patterns/organisms/section-expandable-banner/css/section-expandable-banner.states.css
+++ b/patterns/organisms/section-expandable-banner/css/section-expandable-banner.states.css
@@ -11,7 +11,6 @@
     background-color: rgba(0, 0, 0, 0.35);
     content: '';
     display: block;
-    z-index: 1;
   }
   .js-section-expandable-banner.has-overlay img {
     display: block;
