--- a/patterns/utilities/mixins/_media-elements.scss
+++ b/patterns/utilities/mixins/_media-elements.scss
@@ -12,7 +12,6 @@
     background-color: $image-overlay-bg-color;
     content: '';
     display: block;
-    z-index: 1;
   }
 
   img {
@@ -91,5 +90,9 @@
     -moz-transform: scale(1.1);
    -webkit-transform: scale(1.1);
     transform: scale(1.1);
+  }
+
+  &::before {
+    z-index: 1;
   }
 }
